# pos-services-cart/src/main/java/edu/nju/sa2022/micropos/cart/model/Item.java
@@ -1,21 +1,0 @@
-package edu.nju.sa2022.micropos.cart.model;
-
-import java.io.Serializable;
-
-public class Item implements Serializable {
-    private Product product;
-    private int quantity;
-
-    public Item(Product product, int quantity) {
-        this.product = product;
-        this.quantity = quantity;
-    }
-
-    public Product getProduct() {
-        return product;
-    }
-
-    public int getQuantity() {
-        return quantity;
-    }
-}
